--- a/package.json
+++ b/package.json
@@ -44,10 +44,15 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "clsx": "^2.1.0",
+    "formik": "^2.4.6",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.21.3",
+    "redux-persist": "^6.0.0"
   }
 }
